--- a/src/main/res/drawable/drawer_btn_background.xml
+++ b/src/main/res/drawable/drawer_btn_background.xml
@@ -16,15 +16,8 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <string name="app_name">Theme Spotlight</string>
+    <item android:state_pressed="true" android:drawable="@color/drawer_options_background"/>
 
-    <!-- Navigation drawer options -->
-    <string name="evolve_sms_themes">EvolveSMS Themes</string>
-    <string name="talon_themes">Talon Themes</string>
-    <string name="featured_themers">Featured Themers</string>
-    <string name="settings">Settings</string>
-    <string name="send_feedback">Send Feedback</string>
-
-</resources>
+</selector>
