--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -20,10 +20,11 @@
 
     <style name="Theme" parent="@android:style/Theme.Holo.Light">
         <item name="android:actionBarStyle">@style/OrangeActionBar</item>
+        <item name="android:windowBackground">@color/window_background</item>
     </style>
 
     <style name="OrangeActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-        <item name="android:background">@android:color/holo_orange_dark</item>
+        <item name="android:background">@drawable/ab_solid_orange_holo</item>
         <item name="android:titleTextStyle">@style/OrangeActionBar.TitleTextStyle</item>
         <item name="android:subtitleTextStyle">@style/OrangeActionBar.SubtitleTextStyle</item>
     </style>
@@ -34,6 +35,27 @@
 
     <style name="OrangeActionBar.SubtitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle">
         <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="DrawerButton">
+        <item name="android:paddingTop">18dp</item>
+        <item name="android:paddingBottom">18dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:background">@drawable/drawer_btn_background</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textColor">@color/drawer_text_color</item>
+    </style>
+
+    <style name="DrawerOptionsButton">
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingBottom">12dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textColor">@color/drawer_subtext_color</item>
+        <item name="android:layout_centerVertical">true</item>
     </style>
 
 </resources>
