--- a/src/main/res/xml/changelog.xml
+++ b/src/main/res/xml/changelog.xml
@@ -17,6 +17,10 @@
   -->
 
 <changelog>
+    <version name="0.0.2">
+        <text>Authenticate and log themes pulled from the play store</text>
+        <text>Simple fragments displaying loading</text>
+    </version>
     <version name="0.0.1">
         <text>Initial build based off of Google Play Music look and feel</text>
     </version>
