add an item adapter for apps that are pulled from the play store; version 0.1.0

--- a/src/main/res/xml/changelog.xml
+++ b/src/main/res/xml/changelog.xml
@@ -17,6 +17,9 @@
   -->
 
 <changelog>
+    <version name="0.1.0">
+        <text>Display themes on a list</text>
+    </version>
     <version name="0.0.2">
         <text>Authenticate and log themes pulled from the play store</text>
         <text>Simple fragments displaying loading</text>
