--- a/src/main/res/layout/theme_item.xml
+++ b/src/main/res/layout/theme_item.xml
@@ -19,7 +19,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:paddingLeft="10dp"
+              android:paddingRight="10dp"
+              android:paddingTop="4dp"
+              android:paddingBottom="4dp">
 
     <ImageView
         android:layout_width="52dp"
