--- a/src/main/res/drawable/list_divider.xml
+++ b/src/main/res/drawable/list_divider.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (C) 2014 Klinker Apps, Inc.
   ~
@@ -15,18 +16,13 @@
   ~ limitations under the License.
   -->
 
-<resources>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Main screen colors -->
-    <color name="window_background">#e5e5e5</color>
-    <color name="list_divider_color">#cecece</color>
+    <item android:left="15dp"
+          android:right="15dp">
 
-    <!-- Drawer colors -->
-    <color name="drawer_options_background">#f7f7f7</color>
-    <color name="drawer_options_item_selected">#e3e3e3</color>
-    <color name="drawer_background">@android:color/white</color>
-    <color name="drawer_text_color">#505050</color>
-    <color name="drawer_divider_color">#e5e5e5</color>
-    <color name="drawer_subtext_color">#666666</color>
-
-</resources>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/list_divider_color"/>
+        </shape>
+    </item>
+</layer-list>
