--- a/src/main/res/layout-large-land/activity_spotlight.xml
+++ b/src/main/res/layout-large-land/activity_spotlight.xml
@@ -28,14 +28,30 @@
             android:layout_height="match_parent">
 
         <FrameLayout
-                android:layout_width="200dp"
+                android:layout_width="400dp"
                 android:layout_height="match_parent"
                 android:id="@+id/content_frame"/>
 
-        <FrameLayout
+        <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/list_divider_color"/>
+
+        <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/theme_frame"/>
+                android:id="@+id/theme_frame">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/select_a_theme"
+                    android:layout_centerInParent="true"
+                    android:textSize="14sp"
+                    android:alpha="50"
+                    android:fontFamily="sans-serif-light"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
