--- a/src/main/res/layout/theme_item.xml
+++ b/src/main/res/layout/theme_item.xml
@@ -42,14 +42,16 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:singleLine="true"/>
 
         <TextView
             android:id="@+id/publisher"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            android:singleLine="true"/>
 
     </LinearLayout>
 </LinearLayout>
