--- a/src/main/res/layout-large-land/activity_spotlight.xml
+++ b/src/main/res/layout-large-land/activity_spotlight.xml
@@ -37,7 +37,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/list_divider_color"/>
 
-        <RelativeLayout
+        <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/theme_frame">
@@ -45,13 +45,10 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/select_a_theme"
-                    android:layout_centerInParent="true"
-                    android:textSize="14sp"
-                    android:alpha="50"
-                    android:fontFamily="sans-serif-light"/>
+                    android:layout_gravity="center"
+                    android:text="@string/select_a_theme"/>
 
-        </RelativeLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
