--- a/src/main/res/xml/changelog.xml
+++ b/src/main/res/xml/changelog.xml
@@ -17,6 +17,9 @@
   -->
 
 <changelog>
+    <version name="0.5.0">
+        <text>Spinner at the bottom of the theme list</text>
+    </version>
     <version name="0.4.0" description="Yay, load more list items">
         <text>Load more items as you scroll on the list of themes</text>
         <text>Tons of bug fixes</text>
