--- a/src/main/res/layout/fragment_theme.xml
+++ b/src/main/res/layout/fragment_theme.xml
@@ -19,6 +19,84 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:padding="2dp">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:id="@+id/icon"
+            android:padding="5dp"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/theme_name"
+                    android:singleLine="true"
+                    android:layout_marginRight="10dp"
+                    android:textSize="22sp"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:id="@+id/publisher_name"
+                    android:singleLine="true"
+                    android:layout_marginRight="10dp"
+                    android:textSize="16sp"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/list_divider"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"/>
+
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="15dp"
+            android:id="@+id/screenshot"/>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/list_divider"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"/>
+
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/download"
+            android:textColor="@color/drawer_text_color"
+            android:background="@drawable/button_background"
+            android:id="@+id/download"/>
+
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/view_source"
+            android:textColor="@color/drawer_text_color"
+            android:id="@+id/view_source"
+            android:background="@drawable/button_background"
+            android:visibility="gone"/>
 
 </LinearLayout>
