--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -18,12 +18,12 @@
 
 <resources>
 
-    <style name="Theme" parent="@android:style/Theme.Holo.Light">
+    <style name="Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/OrangeActionBar</item>
         <item name="android:windowBackground">@color/window_background</item>
     </style>
 
-    <style name="OrangeActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
+    <style name="OrangeActionBar" parent="@android:style/Widget.Holo.ActionBar">
         <item name="android:background">@drawable/ab_solid_orange_holo</item>
         <item name="android:titleTextStyle">@style/OrangeActionBar.TitleTextStyle</item>
         <item name="android:subtitleTextStyle">@style/OrangeActionBar.SubtitleTextStyle</item>
