more todo in the changelog roadmap

--- a/src/main/res/xml/changelog.xml
+++ b/src/main/res/xml/changelog.xml
@@ -21,10 +21,12 @@
         <text>Awesome icon and ready for release</text>
     </version>
     <version name="0.9.0" description="Even more themer stuff">
-        <text>Click individual themes for each themer</text>
+        <text>Click individual themes for each featured themer</text>
+        <text>Finished searching for themes</text>
     </version>
     <version name="0.8.0" description="More themer stuff">
         <text>List themes for each featured themer</text>
+        <text>Searching icon added on EvolveSMS and Talon pages</text>
     </version>
     <version name="0.7.0" description="Now's where the interactive fun starts :)">
         <text>Featured themers list</text>
