--- a/src/main/res/layout/fragment_theme.xml
+++ b/src/main/res/layout/fragment_theme.xml
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:text="@string/download"
             android:textColor="@color/drawer_text_color"
-            android:background="@drawable/button_background"
+            android:background="?button_background"
             android:id="@+id/download"/>
 
     <Button
@@ -96,7 +96,7 @@
             android:text="@string/view_source"
             android:textColor="@color/drawer_text_color"
             android:id="@+id/view_source"
-            android:background="@drawable/button_background"
+            android:background="?button_background"
             android:visibility="gone"/>
 
 </LinearLayout>
