--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -21,6 +21,10 @@
     <style name="Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/OrangeActionBar</item>
         <item name="android:windowBackground">@color/window_background</item>
+
+        <item name="drawer_button_background">@drawable/drawer_btn_background</item>
+        <item name="drawer_options_button_background">@drawable/drawer_option_btn_background</item>
+        <item name="button_background">@drawable/btn_background</item>
     </style>
 
     <style name="OrangeActionBar" parent="@android:style/Widget.Holo.ActionBar">
@@ -41,7 +45,7 @@
         <item name="android:paddingTop">18dp</item>
         <item name="android:paddingBottom">18dp</item>
         <item name="android:paddingLeft">20dp</item>
-        <item name="android:background">@drawable/drawer_btn_background</item>
+        <item name="android:background">?drawer_button_background</item>
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textColor">@color/drawer_text_color</item>
