--- a/src/main/res/xml/changelog.xml
+++ b/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
 <changelog>
     <version name="1.0.0" description="Oh yeah, done.">
-        <text>Awesome icon and ready for release</text>
+        <text>Ready for release</text>
     </version>
     <version name="0.9.0" description="Even more themer stuff">
         <text>Click individual themes for each featured themer</text>
