--- a/src/main/res/layout-large-land/activity_spotlight.xml
+++ b/src/main/res/layout-large-land/activity_spotlight.xml
@@ -25,7 +25,8 @@
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:id="@+id/content_holder">
 
         <FrameLayout
                 android:layout_width="400dp"
