--- a/src/main/res/layout/activity_spotlight.xml
+++ b/src/main/res/layout/activity_spotlight.xml
@@ -23,12 +23,18 @@
         android:layout_height="match_parent"
         android:id="@+id/drawer_layout">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/content_frame">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/content_holder">
 
-    </FrameLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/content_frame">
+
+        </FrameLayout>
+    </LinearLayout>
 
     <include
         layout="@layout/navigation_drawer"/>
