--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -18,5 +18,6 @@
 <resources>
 
     <dimen name="list_divider_height">1dp</dimen>
+    <dimen name="total_content_slide_distance">80dp</dimen>
 
 </resources>
