--- a/src/main/res/layout-large-land/activity_spotlight.xml
+++ b/src/main/res/layout-large-land/activity_spotlight.xml
@@ -47,6 +47,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:id="@+id/select_item_label"
                     android:text="@string/select_a_theme"/>
 
         </FrameLayout>
