layout adjustments for the landscape theme viewer

--- a/src/main/res/layout-land/fragment_theme.xml
+++ b/src/main/res/layout-land/fragment_theme.xml
@@ -31,8 +31,10 @@
 
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="74dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical">
 
             <ImageView
                     android:layout_width="64dp"
@@ -91,6 +93,11 @@
                 android:id="@+id/view_source"
                 android:background="@drawable/btn_background"
                 android:visibility="gone"/>
+
+        <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/review_list"/>
 
     </LinearLayout>
 
