--- a/src/main/res/layout/fragment_theme.xml
+++ b/src/main/res/layout/fragment_theme.xml
@@ -25,7 +25,9 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="74dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical">
 
         <ImageView
             android:layout_width="64dp"
