--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -51,6 +51,13 @@
         <item name="android:textColor">@color/drawer_text_color</item>
     </style>
 
+    <style name="Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/drawer_text_color</item>
+        <item name="android:background">?button_background</item>
+    </style>
+
     <style name="DrawerOptionsButton">
         <item name="android:paddingTop">12dp</item>
         <item name="android:paddingBottom">12dp</item>
