--- a/src/main/res/layout/fragment_theme.xml
+++ b/src/main/res/layout/fragment_theme.xml
@@ -85,20 +85,14 @@
             android:layout_marginBottom="5dp"/>
 
     <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/Button"
             android:text="@string/download"
-            android:textColor="@color/drawer_text_color"
-            android:background="?button_background"
             android:id="@+id/download"/>
 
     <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/Button"
             android:text="@string/view_source"
-            android:textColor="@color/drawer_text_color"
             android:id="@+id/view_source"
-            android:background="?button_background"
             android:visibility="gone"/>
 
 </LinearLayout>
