--- a/src/main/res/values-v21/styles.xml
+++ b/src/main/res/values-v21/styles.xml
@@ -19,9 +19,9 @@
 <resources>
 
     <style name="Theme" parent="@android:style/Theme.Material.Light.DarkActionBar">
-        <item name="android:colorPrimary">@android:color/holo_orange_dark</item>
+        <item name="android:colorPrimary">@color/primary_color</item>
         <item name="android:colorPrimaryDark">@color/primary_color_dark</item>
-        <item name="android:colorAccent">@color/primary_color</item>
+        <item name="android:colorAccent">@color/accent_color</item>
         <item name="android:windowBackground">@color/window_background</item>
 
         <item name="drawer_button_background">?android:attr/selectableItemBackground</item>
@@ -37,6 +37,11 @@
         <item name="android:textSize">20sp</item>
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textColor">@color/drawer_text_color</item>
+    </style>
+
+    <style name="Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
 </resources>
