only show comments/reviews on the tablet layout in landscape

--- a/src/main/res/layout-large-land/fragment_theme.xml
+++ b/src/main/res/layout-large-land/fragment_theme.xml
@@ -94,6 +94,11 @@
                 android:background="@drawable/btn_background"
                 android:visibility="gone"/>
 
+        <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/review_list"/>
+
     </LinearLayout>
 
     <ImageView
