show app data when clicking on the theme header

--- a/src/main/res/xml/changelog.xml
+++ b/src/main/res/xml/changelog.xml
@@ -36,6 +36,7 @@
         <text>Fancy animation for fragment as drawer pulls out</text>
         <text>Multiple screenshots</text>
         <text>Theme reviews for tablets</text>
+        <text>Show theme details when you click on the title</text>
         <text>More unit testing</text>
     </version>
     <version name="0.6.0" description="Android L.">
