--- a/src/main/res/layout-land/fragment_theme.xml
+++ b/src/main/res/layout-land/fragment_theme.xml
@@ -29,46 +29,7 @@
             android:orientation="vertical"
             android:padding="20dp">
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="74dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_gravity="center_vertical">
-
-            <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="match_parent"
-                    android:id="@+id/icon"
-                    android:padding="5dp"/>
-
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:paddingLeft="10dp">
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/theme_name"
-                        android:singleLine="true"
-                        android:layout_marginRight="10dp"
-                        android:textSize="22sp"/>
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="sans-serif-light"
-                        android:id="@+id/publisher_name"
-                        android:singleLine="true"
-                        android:layout_marginRight="10dp"
-                        android:textSize="16sp"/>
-
-            </LinearLayout>
-        </LinearLayout>
+        <include layout="@layout/theme_title" />
 
         <View
                 android:layout_width="match_parent"
