--- a/src/main/res/drawable/btn_background.xml
+++ b/src/main/res/drawable/btn_background.xml
@@ -18,6 +18,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true" android:drawable="@color/orange"/>
+    <item android:state_pressed="true" android:drawable="@color/button_pressed"/>
 
 </selector>
