--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <!-- Main screen colors -->
     <color name="window_background">#e5e5e5</color>
     <color name="list_divider_color">#cecece</color>
-    <color name="orange">#55ffbb33</color>
+    <color name="button_pressed">#22000000</color>
     <color name="primary_color">@android:color/holo_orange_dark</color>
     <color name="primary_color_dark">#c96f05</color>
 
