load all of the screenshots for a theme in a horizontal list view from our old theme portal app

--- a/src/main/res/layout-large-land/fragment_theme.xml
+++ b/src/main/res/layout-large-land/fragment_theme.xml
@@ -78,11 +78,10 @@
 
     </LinearLayout>
 
-    <ImageView
+    <com.klinker.android.theme_spotlight.view.HorizontalListView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:padding="15dp"
-            android:id="@+id/screenshot"/>
+            android:id="@+id/screenshot_list"/>
 
 </LinearLayout>
