--- a/src/main/res/layout/fragment_theme.xml
+++ b/src/main/res/layout/fragment_theme.xml
@@ -31,12 +31,11 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"/>
 
-    <ImageView
+    <com.klinker.android.theme_spotlight.view.HorizontalListView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:padding="15dp"
-            android:id="@+id/screenshot"/>
+            android:id="@+id/screenshot_list"/>
 
     <View
             android:layout_width="match_parent"
