--- a/src/main/res/layout/screenshot_item.xml
+++ b/src/main/res/layout/screenshot_item.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (C) 2014 Klinker Apps, Inc.
   ~
@@ -15,10 +16,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-
-    <dimen name="list_divider_height">1dp</dimen>
-    <dimen name="total_content_slide_distance">80dp</dimen>
-    <dimen name="screenshot_width_padding">120dp</dimen>
-
-</resources>
+<ImageView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
+        android:minWidth="200dp"
+        android:layout_height="wrap_content"
+        android:minHeight="600dp"
+        android:scaleType="fitCenter"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"/>
