some activity animations when clicking on an item on the list and starting a new activity. needs tested, it doesn't work on the emulator at all

--- a/src/main/res/layout/theme_item.xml
+++ b/src/main/res/layout/theme_item.xml
@@ -29,6 +29,7 @@
         android:layout_width="52dp"
         android:layout_height="52dp"
         android:id="@+id/icon"
+        android:viewName="themeIcon"
         android:padding="4dp"/>
 
     <LinearLayout
@@ -43,7 +44,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:viewName="themeTitle"/>
 
         <TextView
             android:id="@+id/publisher"
@@ -51,7 +53,8 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:fontFamily="sans-serif-light"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:viewName="themePublisher"/>
 
     </LinearLayout>
 </LinearLayout>
