--- a/src/main/res/drawable/screenshot_background.xml
+++ b/src/main/res/drawable/screenshot_background.xml
@@ -16,14 +16,6 @@
   ~ limitations under the License.
   -->
 
-<ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:minWidth="200dp"
-        android:layout_height="wrap_content"
-        android:minHeight="600dp"
-        android:scaleType="fitCenter"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:elevation="1dp"
-        android:background="@drawable/screenshot_background"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+</selector>
