--- a/src/main/res/layout/screenshot_item.xml
+++ b/src/main/res/layout/screenshot_item.xml
@@ -25,5 +25,4 @@
         android:scaleType="fitCenter"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
-        android:elevation="1dp"
-        android:background="@drawable/screenshot_background"/>
+        android:elevation="1dp"/>
