convert list fragment to fragment to prepare for recycler view

--- a/src/main/res/layout/fragment_theme_list.xml
+++ b/src/main/res/layout/fragment_theme_list.xml
@@ -16,9 +16,21 @@
   ~ limitations under the License.
   -->
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:id="@android:id/list"
-          android:divider="@drawable/list_divider"
-          android:dividerHeight="1dp"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+
+    <ListView android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:id="@android:id/list"
+              android:divider="@drawable/list_divider"
+              android:dividerHeight="1dp"/>
+
+    <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:id="@+id/loading_progress"/>
+
+</FrameLayout>
