--- a/src/main/res/layout/fragment_theme_list.xml
+++ b/src/main/res/layout/fragment_theme_list.xml
@@ -20,17 +20,30 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <ListView android:layout_width="match_parent"
+    <android.support.v7.widget.RecyclerView
+              android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@android:id/list"
               android:divider="@drawable/list_divider"
               android:dividerHeight="1dp"/>
 
-    <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:id="@+id/loading_progress"/>
+    <LinearLayout android:layout_height="wrap_content"
+                  android:layout_width="wrap_content"
+                  android:layout_gravity="center"
+                  android:id="@+id/loading_progress"
+                  android:orientation="vertical">
 
+        <ProgressBar
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_gravity="center"
+                android:indeterminate="true"/>
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/loading"
+                android:padding="5dp"/>
+
+    </LinearLayout>
 </FrameLayout>
