--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="list_divider_height">1dp</dimen>
     <dimen name="total_content_slide_distance">80dp</dimen>
     <dimen name="screenshot_width_padding">120dp</dimen>
+    <dimen name="tablet_list_width">400dp</dimen>
     <integer name="featured_themers_columns">1</integer>
 
 </resources>
