--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -33,6 +33,10 @@
         <item name="android:subtitleTextStyle">@style/OrangeActionBar.SubtitleTextStyle</item>
     </style>
 
+    <style name="ScreenshotViewer" parent="@style/Theme">
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
     <style name="OrangeActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">@android:color/white</item>
     </style>
