--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -41,7 +41,8 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="OrangeActionBar.SubtitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle">
+    <style name="OrangeActionBar.SubtitleTextStyle"
+           parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Subtitle">
         <item name="android:textColor">@android:color/white</item>
     </style>
 
