translucent theme for the screenshot viewer activity so you can see the background behind the screenshot

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -34,7 +34,11 @@
     </style>
 
     <style name="ScreenshotViewer" parent="@style/Theme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowActionModeOverlay">true</item>
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 
     <style name="OrangeActionBar.TitleTextStyle" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
