--- a/src/main/res/layout-large-land/fragment_theme.xml
+++ b/src/main/res/layout-large-land/fragment_theme.xml
@@ -62,7 +62,7 @@
 
     </LinearLayout>
 
-    <com.klinker.android.theme_spotlight.view.HorizontalListView
+    <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
