--- a/src/main/res/layout/fragment_theme.xml
+++ b/src/main/res/layout/fragment_theme.xml
@@ -31,7 +31,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="10dp"/>
 
-    <com.klinker.android.theme_spotlight.view.HorizontalListView
+    <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
