--- a/src/main/res/values-v21/styles.xml
+++ b/src/main/res/values-v21/styles.xml
@@ -19,8 +19,6 @@
 <resources>
 
     <style name="Theme" parent="@android:style/Theme.Material.Light.DarkActionBar">
-        <!--<item name="android:windowContentTransitions">true</item>-->
-
         <item name="android:colorPrimary">@color/primary_color</item>
         <item name="android:colorPrimaryDark">@color/primary_color_dark</item>
         <item name="android:colorAccent">@color/accent_color</item>
@@ -42,8 +40,12 @@
     </style>
 
     <style name="ScreenshotViewer" parent="@style/Theme">
-        <item name="android:windowContentOverlay">@null</item>
         <item name="android:colorPrimaryDark">@color/secondary_text_color</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowActionModeOverlay">true</item>
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 
 </resources>
