--- a/src/main/res/drawable/list_divider.xml
+++ b/src/main/res/drawable/list_divider.xml
@@ -18,9 +18,7 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:left="15dp"
-          android:right="15dp">
-
+    <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/list_divider_color"/>
         </shape>
