--- a/src/main/res/layout-large-land/fragment_theme.xml
+++ b/src/main/res/layout-large-land/fragment_theme.xml
@@ -31,29 +31,47 @@
 
         <include layout="@layout/theme_title"/>
 
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal">
+
+            <View android:layout_width="0dp"
+                  android:layout_height="0dp"
+                  android:layout_weight="1"/>
+
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:minWidth="120dp"
+                    android:text="@string/view_source"
+                    android:textColor="@color/drawer_text_color"
+                    android:id="@+id/view_source"
+                    android:background="@drawable/btn_source"
+                    android:visibility="invisible"
+                    android:textAllCaps="true"
+                    android:textSize="11sp"/>
+
+            <Button
+                    android:layout_width="wrap_content"
+                    android:minWidth="120dp"
+                    android:layout_height="28dp"
+                    android:text="@string/download"
+                    android:textColor="@android:color/white"
+                    android:background="@drawable/btn_download"
+                    android:id="@+id/download"
+                    android:textAllCaps="true"
+                    android:textSize="11sp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="10dp"/>
+
+        </LinearLayout>
+
         <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@drawable/list_divider"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"/>
-
-        <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/download"
-                android:textColor="@color/drawer_text_color"
-                android:background="@drawable/btn_background"
-                android:id="@+id/download"/>
-
-        <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/view_source"
-                android:textColor="@color/drawer_text_color"
-                android:id="@+id/view_source"
-                android:background="@drawable/btn_background"
-                android:visibility="gone"/>
 
         <ListView
                 android:layout_width="match_parent"
