--- a/src/main/res/drawable/btn_download.xml
+++ b/src/main/res/drawable/btn_download.xml
@@ -19,6 +19,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_pressed="true" android:drawable="@drawable/btn_solid_touched"/>
+    <item android:state_enabled="false" android:drawable="@drawable/btn_solid_touched"/>
     <item android:drawable="@drawable/btn_solid"/>
 
 </selector>
